--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#6f7070">
     <link rel="stylesheet" type="text/css" href="./css/app.min.css" />
+    <link rel="manifest" href="/manifest.json">
+    <script src="./ws.js"></script>
     <title>Agenda Telefonica</title>
     
 </head>
