--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" manifest="cache">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#6f7070">
     <link rel="stylesheet" type="text/css" href="./css/app.min.css" />
-    <link rel="manifest" href="/manifest.json">
-    <script src="./ws.js"></script>
+    <link rel="manifest" href="./manifest.json">
     <title>Agenda Telefonica</title>
     
 </head>
@@ -15,6 +14,7 @@
     <div class="app">
 
     </div>
+    <script src="./registra.js"></script>
     <script src="./js/app.min.js"></script>
 </body>
 </html>
